update second timeindex file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>fuck you go away</h1>
     <h1>not sure what i am doimng</h1>
-    
+    <h1>fuck three times</h1>
 </body>
 </html>
